<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="reactor_title">Reator de Fusão</string>
    <string name="build_tweaks_summary_title">Onde a Mágica Começa</string>
    <string name="status_bar_category">Barra de Status</string>
    <string name="status_bar_items_title">Items da Barra de Status</string>
    <string name="traffic_title">Idicadores de tráfego</string>
    <string name="status_bar_icons_title">Ícones da Barra de Status</string>
    <string name="notification_panel_title">Painel de Notificações</string>
    <string name="quick_settings_title">Configurações Rápidas</string>
    <string name="status_bar_gestures_title">Gestos na Barra de Status</string>
    <string name="notifications_category">Notificações</string>
    <string name="battery_light_settings">Luz da Bateria em Carregamento</string>
    <string name="buttons_category">Botões</string>
    <string name="navigation_bar_title">Barra de Navegação</string>
    <string name="hardware_keys_title">Botões do Hardware</string>
    <string name="power_menu_title">Botão de Energia</string>
    <string name="volume_rocker_title">Botões de Volume</string>
    <string name="navigationbar_settings_title">Barra de Navegação</string>
    <string name="recents_category">Recentes</string>
    <string name="recents_ui_title">Interface dos Recentes</string>
    <string name="lockscreen_category">Tela de Bloqueio</string>
    <string name="lockscreen_ui_title">Interface da Tela de Bloqueio</string>
    <string name="lockscreen_gestures_title">Gestos na Tela de Bloqueio</string>
    <string name="system_category">Sistema</string>
    <string name="app_ops_title">Opções de APPs</string>
    <string name="developer_settings_title">Configurações de Desenvolvedor</string>
    <string name="reactor_dialog_title">Nos ajude a ajudar a você!</string>
    <string name="reactor_dialog_message">Caso você encontre um bug em alguma dessas configurações, por favor reporte-o em nossos fóruns. https://forum.purefusionos.com. Por favor, reporte primeiro para o fórum específico do seu aparelho. O mantenedor irá decidir se o problema precisa ser informado aos demais. Qualquer bug reportado sem um logcat apropriado será ignorado!</string>
    <string name="dialog_color_picker">Seletor de cor</string>
    <string name="press_color_to_apply">Pressione uma cor abaixo para aplicar</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Aplicar</string>
    <string name="color_default">Padrão</string>
    <string name="add">Adicionar</string>
    <string name="advanced">Avançado</string>
    <string name="cancel">Cancelar</string>
    <string name="choose_app">Escolher app</string>
    <string name="general_category">Geral</string>
    <string name="gestures_category">Gestos</string>
    <string name="security_category">Segurança</string>
    <string name="aosp_recents_category">Recentes estilo AOSP</string>
    <string name="hardware_category">Hardware</string>
    <string name="light_category">Luzes</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Atenção</string>
    <string name="loading">Carregando\u2026</string>
    <string name="reset">Resetar</string>
    <string name="reset_colors">Resetar cores</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Texto</string>
    <string name="icon_title">Ícone</string>
    <string name="color_title">Cor</string>
    <string name="colors_title">Cores</string>
    <string name="general_settings_title">Configurações Gerais</string>
    <string name="enable_mtp_dirtyhack_title">MTP ao invés de carregar</string>
    <string name="enable_mtp_dirtyhack_summary">Habilitar MTP por padrão para conexão USB</string>
    <string name="show_clear_all_recents_button_title">Botão Limpar tudo</string>
    <string name="show_clear_all_recents_button_summary">Mostrar botão Limpar tudo</string>
    <string name="recents_clear_all_location_title">Localização do Limpar tudo</string>
    <string name="recents_clear_all_location_top_right">Em cima à direita</string>
    <string name="recents_clear_all_location_top_left">Em cima à esquerda</string>
    <string name="recents_clear_all_location_top_center">Em cima centralizado</string>
    <string name="recents_clear_all_location_bottom_right">Em baixo à direita</string>
    <string name="recents_clear_all_location_bottom_left">Em baixo à esquerda</string>
    <string name="recents_clear_all_location_bottom_center">Em baixo centralizado</string>
    <string name="recents_show_membar_title">Barra da memória RAM</string>
    <string name="recents_show_membar_summary">Exibe a memória RAM diponível no aparelho</string>
    <string name="recents_icon_pack_title">Pacote de Ícones</string>
    <string name="recents_icon_pack_summary">Aplica um pacote de ícone personalizado ao painel de recentes</string>
    <string name="no_iconpacks_summary">Sem pacotes de ícones instalados</string>
    <string name="dialog_pick_iconpack_title">Selecionar um pacote de ícones</string>
    <string name="default_iconpack_title">Ícones padrões</string>
    <string name="battery_light_enable">Luz da bateria</string>
    <string name="battery_light_allow_on_dnd_title">Luz da bateria no modo Não Perturbe</string>
    <string name="battery_light_low_blinking_title">Piscar luz quando a bateria estiver fraca</string>
    <string name="battery_light_cat">Cor da luz da bateria enquanto carrega</string>
    <string name="battery_light_low_color">Bateria fraca</string>
    <string name="battery_light_medium_color">Bateria média</string>
    <string name="battery_light_full_color">Bateria quase cheia</string>
    <string name="battery_light_reallyfull_color">Bateria (100) cheia</string>
    <string name="lockscreen_battery_info_title">Informação de carregamento na tela de bloqueio</string>
    <string name="lockscreen_battery_info_summary">Exibir o limite máximo de carga do carregador, voltagem e temperatura da bateria enquanto carrega na tela de bloqueio</string>
    <string name="lock_screen_weather_settings_title">Clima</string>
    <string name="lock_screen_weather_settings_summary">Exibir informação climática na tela de bloqueio</string>
    <string name="weather_show_weather_title">Exibir clima</string>
    <string name="weather_show_weather_summary">Habilitar exibição de informação climática</string>
    <string name="weather_show_location_title">Exibir localização</string>
    <string name="weather_show_location_summary">Habilitar exibição da localização</string>
    <string name="weather_config_title">Configurações de serviço</string>
    <string name="weather_icon_pack_title">Pacote de ícones do clima</string>
    <string name="powermenu_screenshot">Captura de tela</string>
    <string name="powermenu_screenrecord">Gravação de tela</string>
    <string name="powermenu_power">Desligar</string>
    <string name="powermenu_restart">Reiniciar</string>
    <string name="powermenu_restart_recovery">Reinício Avançado</string>
    <string name="powermenu_airplane">Modo Avião</string>
    <string name="powermenu_settings">Configurações</string>
    <string name="powermenu_lockdown">Bloquear</string>
    <string name="powermenu_soundpanel">Painel de Som</string>
    <string name="powermenu_users">Usuários</string>
    <string name="powermenu_torch">Lanterna</string>
    <string name="powermenu_emergency_affordance">Emergência</string>
    <string name="network_traffic_type">Selecionar o tipo de tráfego a exibir</string>
    <string name="show_network_traffic_up">Envio</string>
    <string name="show_network_traffic_down">Recebimento</string>
    <string name="show_network_traffic_all">Envio e Recebimento</string>
    <string name="network_traffic_state_title">Exibir atividade de rede na barra de status</string>
    <string name="network_traffic_autohide_threshold_title">Esconder atividade de rede abaixo de (KB/s)</string>
    <string name="power_notification_controls_title">Ativar controle de notificações</string>
    <string name="power_notification_controls_summary">Selecione o nível de importância das notificações</string>
    <string name="lockscreen_power_menu_disabled_title">Menu de energia na tela de bloqueio</string>
    <string name="lockscreen_power_menu_disabled_summary">Desabilitar o menu de energia na tela de bloqueio</string>
    <string name="show_fourg_icon_title">Ícone 4G</string>
    <string name="show_fourg_icon_summary">Exibir o ícone 4G na conexão ao invés de LTE</string>
    <string name="roaming_indicator_icon_title">Indicador de roaming</string>
    <string name="roaming_indicator_icon_summary">Exibir indicador de roaming no ícone de sinal quando estiver </string>
    <string name="qs_brightness_slider_title">Controle de brilho</string>
    <string name="qs_brightness_slider_summary">Mostrar o controle de brilho no painel rápido</string>
    <string name="toast_icon_title">Ícone do app em notificações toast</string>
    <string name="toast_icon_summary">Exibir o ícone do app corespondente à notificação toast</string>
    <string name="quick_pulldown_title">Puxar rápido para baixo</string>
    <string name="quick_pulldown_summary">Puxar para baixo rápido a borda %1$s da barra de status para exibir as configurações rápidas</string>
    <string name="quick_pulldown_summary_always">Sempre mostrar as configurações rápidas ao puxar para baixo rápido</string>
    <string name="quick_pulldown_off">Desligado</string>
    <string name="quick_pulldown_left">Esquerda</string>
    <string name="quick_pulldown_right">Direita</string>
    <string name="quick_pulldown_always">Sempre</string>
    <string name="smart_pulldown_title">Puxar para baixo inteligente</string>
    <string name="smart_pulldown_summary">Abrir as configurações rápidas quando houver %1$s notificações</string>
    <string name="smart_pulldown_none_summary">Abrir as configurações rápidas quando não houver nenhuma notificação</string>
    <string name="smart_pulldown_off">Desligado</string>
    <string name="smart_pulldown_none">sem notificações</string>
    <string name="smart_pulldown_dismissable">indispensáveis</string>
    <string name="smart_pulldown_ongoing">sem estar em progresso</string>
    <string name="double_tap_to_sleep_lockscreen_title">Toque duplo para dormir na tela de bloqueio</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Toque duplo na área do terceiro atalho superior ou inferior da tela de bloqueio para por o dispositivo para dormir</string>
    <string name="lockscreen_tuner_title">Atalhos inferiores da tela de bloqueio</string>
    <string name="double_tap_to_sleep_title">Toque duplo na barra de status para dormir</string>
    <string name="double_tap_to_sleep_summary">Toque duplo na barra de status coloca o dispositivo para dormir</string>
    <string name="status_bar_toggle_brightness">Controle de brilho</string>
    <string name="status_bar_toggle_brightness_summary">Ajustar o brilho ao deslizar o dedo na barra de status</string>
    <string name="media_art_title">Arte de álbum na tela de bloqueio</string>
    <string name="media_art_summary">Exibe a arte do álbum durante reprodução na tela de bloqueio</string>
    <string name="swap_volume_buttons_title">Trocar a orientação dos botões de volume</string>
    <string name="swap_volume_buttons_summary">Ajustar a orientação dos botões de volume baseado na rotação do aparelho</string>
    <string name="volume_keys_control_media_stream_title">Botões de volume controlam o volume de mídia</string>
    <string name="volume_keys_control_media_stream_summary">Forçar os botões de volume a controlar o fluxo de mídia</string>
    <string name="logcat_app_title">Logcat</string>
    <string name="logcat_app_summary">Start app to collect logs</string>
</resources>