<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 PureFusionOS
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >

    <com.fusion.reactor.preference.SystemSettingSwitchPreference
        android:key="mtp_dirty_hack"
        android:title="@string/enable_mtp_dirtyhack_title"
        android:summary="@string/enable_mtp_dirtyhack_summary"
        android:defaultValue="true" />
	
    <Preference
        android:key="logcat_app"
        android:title="@string/logcat_app_title"
        android:summary="@string/logcat_app_summary"
        android:persistent="false" >
           <intent android:action="android.intent.action.MAIN"
                   android:targetPackage="org.omnirom.logcat"
                   android:targetClass="com.pluscubed.logcat.ui.LogcatActivity" />
    </Preference>

</PreferenceScreen>
