<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017 Pure Fusion OS
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/notifications_category"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

<!--
    <Preference
            android:key="systemui_tuner_pnc"
            android:title="@string/power_notification_controls_title"
            android:summary="@string/power_notification_controls_summary" >
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.PowerActivity" />
    </Preference>
-->

    <Preference
        android:key="battery_charging_light"
        android:fragment="com.fusion.reactor.BatteryLightSettings"
        android:icon="@drawable/ic_arrow"
        android:title="@string/battery_light_settings" />

    <Preference
        android:key="notifications_general_settings"
        android:fragment="com.fusion.reactor.NotificationsGeneralSettings"
        android:icon="@drawable/ic_arrow"
        android:title="@string/general_settings_title" />

</PreferenceScreen>
